--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 .header {
   background: #3c3a39;
   display: flex;
-  border: 2px solid red;
   justify-content: space-between;
   align-items: center;
 }
@@ -10,8 +9,40 @@
   margin-right: 1rem;
 }
 
+.header h1 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 24px;
+}
+
 .headline {
   background: #3c3a39;
+}
+
+.headline h1 {
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 64px;
+  color: #ff6b00;
+  margin: 12px 0px;
+}
+
+.headline h3 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  line-height: 32px;
+  color: #fff5e1;
+}
+
+.headline p {
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  color: #ffffff;
 }
 
 .illustration-header {
@@ -33,4 +64,5 @@
 
 .container {
   display: flex;
+  align-items: stretch;
 }
