--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 }
 
 .header h1 {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
   line-height: 24px;
@@ -21,16 +21,16 @@
 }
 
 .headline h1 {
-  font-family: 'Crete Round';
+  font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 64px;
   color: #ff6b00;
-  margin: 12px 0px;
+  margin: 12px 0;
 }
 
 .headline h3 {
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
   line-height: 32px;
@@ -38,11 +38,11 @@
 }
 
 .headline p {
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 24px;
-  color: #ffffff;
+  color: #fff;
 }
 
 .illustration-header {
