--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@
   align-items: center;
 }
 
-.header a {
+.header:last-child {
   margin-right: 1rem;
 }
 
-.header h1 {
+.header a {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -23,7 +23,7 @@
 }
 
 .headline h1 {
-  font-family: 'Crete Round', sans-serif;
+  font-family: 'Crete Round';
   font-style: normal;
   font-weight: 400;
   line-height: 64px;
@@ -31,11 +31,12 @@
   margin: 12px 0;
 }
 
-.headline h3 {
+.job-title {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 700 bold;
   line-height: 32px;
+  font-size: 24px;
   color: #fff5e1;
 }
 
@@ -50,6 +51,8 @@
 .illustration-header {
   background: #3c3a39;
   background-image: url(illustration-header-mobile.png);
+  background-position: center;
+  background-size: cover;
   height: 311.71px;
   width: 406.36px;
 }
@@ -58,6 +61,8 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
+  padding: 24px;
+  background: #3c3a39;
 }
 
 .wraper > * {
@@ -67,12 +72,15 @@
 .container {
   display: flex;
   align-items: stretch;
+  width: 375px;
+  height: 590px;
 }
 
 .icon-bar ul {
   list-style: none;
 }
 
-ul li {
+.icon-bar li {
   display: inline-block;
+  margin: 10px;
 }
