--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
 .header {
   background: #3c3a39;
   display: flex;
   justify-content: space-between;
+  padding: 20px;
   align-items: center;
 }
 
@@ -9,78 +18,84 @@
   margin-right: 1rem;
 }
 
-.header a {
+.logo {
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: 700;
-  line-height: 24px;
-  color: #fff;
   text-decoration: none;
+  cursor: pointer;
+}
+
+.logo:active {
+  box-shadow: 0 2px rgb(255, 254, 254);
+  transform: translateY(4px);
 }
 
 .headline {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 120px 24px;
   background: #3c3a39;
+  background-image: url(illustration-header-mobile.png);
+  background-position: 100% 100%;
+  background-size: 25%;
+  background-repeat: no-repeat;
 }
 
-.headline h1 {
+.name {
+  position: static;
   font-family: 'Crete Round', sans-serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 56px;
   line-height: 64px;
+  letter-spacing: 0.37px;
   color: #ff6b00;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
   margin: 12px 0;
 }
 
 .job-title {
+  color: #fff5e1;
   font-family: 'Roboto', sans-serif;
   font-style: normal;
-  font-weight: bold;
-  line-height: 32px;
+  font-weight: 700;
   font-size: 24px;
-  color: #fff5e1;
+  line-height: 32px;
+  display: flex;
+  align-items: center;
+  flex: none;
+  flex-grow: 0;
 }
 
 .headline p {
+  flex: none;
+  flex-grow: 0;
+  color: #fff;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 400;
+  font-size: 16px;
   line-height: 24px;
-  color: #fff;
+  margin: 12px 0;
 }
 
-.illustration-header {
-  background: #3c3a39;
-  background-image: url(illustration-header-mobile.png);
-  background-position: center;
-  background-size: cover;
-  height: 311.71px;
-  width: 406.36px;
-}
-
-.wraper {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  padding: 24px;
-  background: #3c3a39;
-}
-
-.wraper > * {
-  flex: 1 1 auto;
-}
-
-.container {
-  display: flex;
-  align-items: stretch;
-  width: 375px;
-  height: 590px;
-}
-
-.icon-bar ul {
+.icon-bar {
   list-style: none;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 200px;
 }
 
 .icon-bar li {
   display: inline-block;
   margin: 10px;
+  height: 30px;
+  cursor: pointer;
 }
