--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ html {
   flex-direction: column;
   align-items: flex-start;
   padding: 120px 24px;
-  background: #3c3a39;
+  background: #1c1a19;
   background-image: url(illustration-header-mobile.png);
   background-position: 100% 100%;
   background-size: 25%;
@@ -98,4 +98,292 @@ html {
   margin: 10px;
   height: 30px;
   cursor: pointer;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto;
+  justify-items: center;
+}
+
+.card {
+  margin: 24px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 327px;
+  height: 386px;
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(card-background.png);
+}
+
+.card-block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 8px 16px;
+  width: 327px;
+  height: 248px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.card-title {
+  width: 295px;
+  height: 81px;
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  color: #fff;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 12px 0;
+}
+
+.card-desc {
+  width: 295px;
+  height: 87px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #fff;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 12px 0;
+}
+
+.card-tech-btns {
+  display: flex;
+  flex-direction: row;
+  padding: 0;
+  width: 236px;
+  height: 40px;
+  justify-content: space-between;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  margin: 12px 0;
+  list-style: none;
+}
+
+.card-btn button{
+  height: 40px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  background: rgba(255, 255, 255, 0.24);
+  color: #fff;
+  border: none;
+}
+
+.card-btn-html {
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.card-btn-strap {
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.card-btn-ruby {
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+.proj-view {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: #FF6B00;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  width: 327px;
+  height: 48px;
+}
+
+.proj-view button {
+  width: 124px;
+  height: 48px;
+  background: #FF6B00;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #fff;
+  border: none;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px
+}
+
+.recent-work {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 12px 0;
+}
+
+.title-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 24px 0;
+}
+
+.first-card {
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.first-project {
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.first-card-content {
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.works-title {
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 52px;
+  color: #1c1a19;
+  margin: 24px 0;
+  width: 327px;
+  height: 83px;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.line {
+  width: 327px;
+  height: 0;
+  border: 1px solid #212121;
+  margin: 24px 0;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.multi-post {
+  width: 327px;
+  height: 36px;
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 44px;
+  color: #091e42;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.multi-post-content {
+  width: 327px;
+  height: 147px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #091e42;
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+  margin: 12px 0;
+}
+
+.tech-buttons-recent {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0;
+  width: 297px;
+  height: 40px;
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+.btn-css {
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+.btn-html {
+  flex: none;
+  order: 1;
+  flex-grow: 0;
+}
+
+.btn-strap {
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+}
+
+.btn-ruby {
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+}
+
+.button-recent button {
+  border: 1px solid #8993a4;
+  height: 40px;
+  background: #fff;
+  padding: 10px 12px;
+  box-sizing: border-box;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+}
+
+.see-first-project {
+  border: none;
+  flex: none;
+  order: 3;
+  flex-grow: 0;
+  padding: 12px;
+  background: #ff6b00;
+  width: 124px;
+  height: 48px;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  color: #fff;
 }
