--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ html {
   overflow-x: hidden;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .header {
   background: #3c3a39;
   display: flex;
