--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
   align-items: flex-start;
   padding: 120px 24px;
   background: #1c1a19;
-  background-image: url(illustration-header-mobile.png);
+  background-image: url(img/illustration-header-mobile.png);
   background-position: 100% 100%;
   background-size: 25%;
   background-repeat: no-repeat;
@@ -119,7 +119,7 @@ body {
   justify-content: space-between;
   width: 327px;
   height: 386px;
-  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(card-background.png);
+  background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(img/card-background.png);
 }
 
 .card-block {
@@ -409,7 +409,7 @@ body {
   padding: 120px 24px;
   width: 375px;
   height: 563px;
-  background-image: url(about-background.png);
+  background-image: url(img/about-background.png);
   background-position: 100% 90%;
   background-size: 50%;
   background-repeat: no-repeat;
@@ -509,7 +509,7 @@ body {
 }
 
 .language {
-  list-style: square outside url("trans-rect.png");
+  list-style: square outside url("img/trans-rect.png");
 }
 
 .lang-item {
@@ -536,11 +536,11 @@ body {
 }
 
 .framworks {
-  list-style: square outside url("rectangle.png");
+  list-style: square outside url("img/rectangle.png");
 }
 
 .skills-item {
-  list-style: square outside url("circle.png");
+  list-style: square outside url("img/circle.png");
 }
 
 .skills-list {
