--- a/style.css
+++ b/style.css
@@ -613,7 +613,7 @@ body {
 }
 
 .submit-button:hover {
-  background: #fbf8f7;;
+  background: #fbf8f7;
   padding: 14px;
   width: 135px;
 }
@@ -636,13 +636,6 @@ body {
   margin: 24px 0;
 }
 
-.input-area {
-  flex: none;
-  order: 2;
-  flex-grow: 0;
-  margin: 24px 0;
-}
-
 .input {
   font-family: 'Inter', sans-serif;
   font-style: normal;
@@ -657,6 +650,10 @@ body {
 }
 
 .input-area {
+  flex: none;
+  order: 2;
+  flex-grow: 0;
+  margin: 24px 0;
   font-family: 'Inter', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -682,9 +679,8 @@ body {
 }
 
 footer {
-  margin: 0px;
-  padding: 0px;
-  
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
