--- a/style.css
+++ b/style.css
@@ -1,15 +1,11 @@
-html {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-}
-
-body {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  width: 100%;
 }
 
 .header {
@@ -693,6 +689,7 @@ footer {
   align-items: center;
   justify-content: space-between;
   padding: 0;
+  margin: 15px 0;
   width: 200px;
   flex: none;
   order: 0;
