edit button hover

--- a/style.css
+++ b/style.css
@@ -611,7 +611,7 @@ body {
 .submit-button:hover {
   border: 1px solid #f55800;
   background: #fff5e1;
-  color: #F55800;
+  color: #f55800;
 }
 
 .submit-button:active {
