--- a/style.css
+++ b/style.css
@@ -234,6 +234,13 @@ body {
   font-weight: 700;
   font-size: 17px;
   line-height: 24px;
+  width: 100%;
+}
+
+.proj-view button:hover {
+  background-color: #fff5e1;
+  color: #f55800;
+  border: 1px solid #f55800;
 }
 
 .recent-work {
