--- a/style.css
+++ b/style.css
@@ -235,10 +235,13 @@ body {
   font-size: 17px;
   line-height: 24px;
   width: 100%;
+  transition-property: background;
+  transition-duration: 0.10s;
+  transition-delay: 0.05s;
 }
 
 .proj-view button:hover {
-  background-color: #fff5e1;
+  background: #fff5e1;
   color: #f55800;
   border: 1px solid #f55800;
 }
