--- a/style.css
+++ b/style.css
@@ -221,8 +221,20 @@ body {
   height: 48px;
 }
 
+.button-recent button {
+  border: 1px solid #8993a4;
+  height: 40px;
+  background: #fff;
+  padding: 10px 12px;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+}
+
 .proj-view button {
-  width: 124px;
   height: 48px;
   background: #ff6b00;
   text-align: center;
@@ -236,8 +248,8 @@ body {
   line-height: 24px;
   width: 100%;
   transition-property: background;
-  transition-duration: 0.10s;
-  transition-delay: 0.05s;
+  transition-duration: .1s;
+  transition-delay: .05s;
 }
 
 .proj-view button:hover {
@@ -374,19 +386,6 @@ body {
   flex-grow: 0;
 }
 
-.button-recent button {
-  border: 1px solid #8993a4;
-  height: 40px;
-  background: #fff;
-  padding: 10px 12px;
-  box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 20px;
-}
-
 .see-first-project {
   border: none;
   flex: none;
@@ -478,7 +477,6 @@ body {
 .get-resume:active {
   background: #e05304;
   color: #f4f1f0;
-    
 }
 
 .devider {
