--- a/style.css
+++ b/style.css
@@ -870,6 +870,7 @@ footer {
   }
 
   .card {
+    width: 369px;
     background: linear-gradient(180.45deg, rgba(38, 38, 38, 0) 0.75%, rgba(38, 38, 38, 0.9) 61.94%), url(img/desktop/card-background.png);
   }
 
@@ -890,6 +891,7 @@ footer {
   .card:hover > .proj-view {
     display: block;
     position: absolute;
+    width: 369px;
     bottom: 0;
   }
 
