--- a/style.css
+++ b/style.css
@@ -41,6 +41,13 @@ body {
   padding: 0;
 }
 
+.active {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+}
+
 .navbar-links li {
   list-style: none;
 }
