--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
   color: #fff;
   font-size: 18px;
   font-weight: 700;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   text-decoration: none;
   cursor: pointer;
@@ -41,11 +41,23 @@ body {
   padding: 0;
 }
 
-.active {
+.active-navbar {
   display: flex;
   flex-direction: column;
   width: 100%;
   height: 100vh;
+}
+
+.active {
+  display: flex;
+}
+
+.inactive {
+  display: none;
+}
+
+.closeicon {
+  display: none;
 }
 
 .navbar-links li {
@@ -57,7 +69,7 @@ body {
   text-decoration: none;
   color: #fff;
   padding: 1rem;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 15px;
@@ -85,7 +97,7 @@ body {
 
 .name {
   position: static;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 56px;
@@ -99,7 +111,7 @@ body {
 
 .job-title {
   color: #fff5e1;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 24px;
@@ -114,7 +126,7 @@ body {
   flex: none;
   flex-grow: 0;
   color: #fff;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -166,7 +178,7 @@ body {
 .card-title {
   width: 295px;
   height: 81px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -181,7 +193,7 @@ body {
 .card-desc {
   width: 295px;
   height: 87px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -206,7 +218,7 @@ body {
 .card-btn button {
   height: 40px;
   padding: 5px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -260,7 +272,7 @@ body {
   background: #fff;
   padding: 10px 12px;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 15px;
@@ -274,7 +286,7 @@ body {
   letter-spacing: 0.03em;
   color: #fff;
   border: none;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -332,7 +344,7 @@ body {
 }
 
 .works-title {
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 40px;
@@ -357,7 +369,7 @@ body {
 
 .multi-post {
   height: 36px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
@@ -371,7 +383,7 @@ body {
 .multi-post-content {
   width: 327px;
   height: 147px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -430,7 +442,7 @@ body {
   background: #ff6b00;
   width: 124px;
   height: 48px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -465,7 +477,7 @@ body {
 .about-title {
   width: 100%;
   height: 79px;
-  font-family: 'Crete Round', sans-serif;
+  font-family: "Crete Round", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 72px;
@@ -481,7 +493,7 @@ body {
 .about-content {
   max-width: 327px;
   height: 148px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -496,7 +508,7 @@ body {
 .get-resume {
   border: none;
   padding: 12px;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -550,7 +562,7 @@ body {
 }
 
 .list-item1 {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -563,7 +575,7 @@ body {
 }
 
 .lang-item {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 22px;
@@ -620,7 +632,7 @@ body {
 .form-heading {
   display: flex;
   justify-content: center;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 32px;
@@ -654,7 +666,7 @@ body {
   order: 3;
   flex-grow: 0;
   border: none;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 17px;
@@ -688,7 +700,7 @@ body {
 }
 
 .input {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
@@ -705,7 +717,7 @@ body {
   order: 2;
   flex-grow: 0;
   margin: 24px 0;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 15px;
