--- a/style.css
+++ b/style.css
@@ -826,13 +826,29 @@ footer {
   border-radius: 10px;
 }
 
+.overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  visibility: hidden;
+  background: rgba(151, 148, 147, 0.7);
+  overflow: auto;
+}
+
 .popup-container {
+  position: relative;
+  width: 95%;
+  margin: 20px auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
   height: 718px;
   border: 1px dashed red;
+  background: #fff;
+  
 }
 
 .pop-header {
